force-app/main/default/objects/Unit_Offering__c.object
<CustomObject>
    <description>Unit offering table to hold the data at a unit level</description>
    <fields>
        <fullName>Academic_Year__c</fullName>
        <label>Academic Year</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Achievable_Credit_Point__c</fullName>
        <label>Achievable Credit Point</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Ind__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_f__c</fullName>
        <formula>IF (Active_Ind__c
  , IMAGE(&quot;/resource/1500335404000/GraphicsPackNew/fatcow/farmfresh/16/lightbulb.png&quot;, &quot;Active&quot;, 16, 16)
  , IMAGE(&quot;/resource/1500335404000/GraphicsPackNew/fatcow/farmfresh/16/lightbulb_off.png&quot;, &quot;Not Active&quot;, 16, 16)
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_Sequence_Number__c</fullName>
        <label>CI Sequence Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar_Name__c</fullName>
        <formula>Calendar__r.Type_Alt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calendar Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar_Type__c</fullName>
        <label>Calendar Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar_Year__c</fullName>
        <formula>Calendar__r.Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calendar Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Calendar lookup</description>
        <label>Calendar</label>
        <referenceTo>Calendar__c</referenceTo>
        <relationshipLabel>Unit Offerings</relationshipLabel>
        <relationshipName>Unit_Offerings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End date of the Unit offering</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrolled_Credit_Points__c</fullName>
        <label>Enrolled Credit Points</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Campus</description>
        <label>Location</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Status__c</fullName>
        <description>Monash Abroad status for pre-requisites</description>
        <label>MA Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Managing_Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Managing Department</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Managing Department</relationshipLabel>
        <relationshipName>Unit_Offerings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Managing_Faculty_Name__c</fullName>
        <formula>Managing_Faculty__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Managing Faculty Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Managing_Faculty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owning faculty for the Unit offering</description>
        <label>Managing Faculty</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Unit Offerings</relationshipLabel>
        <relationshipName>Managing_Faculty</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Offered_Ind__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Offered indicator</description>
        <label>Offered Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offered_f__c</fullName>
        <formula>IF (Offered_Ind__c
  , IMAGE(&quot;/resource/1500335404000/GraphicsPackNew/fatcow/farmfresh/16/lightbulb.png&quot;, &quot;Active&quot;, 16, 16)
  , IMAGE(&quot;/resource/1500335404000/GraphicsPackNew/fatcow/farmfresh/16/lightbulb_off.png&quot;, &quot;Not Active&quot;, 16, 16)
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offered</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Points_Override_Ind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Points Override Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSF_Avail_Ind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SSF Avail Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSF_Avail_f__c</fullName>
        <formula>IF (SSF_Avail_Ind__c
  , IMAGE(&quot;/resource/1500335404000/GraphicsPackNew/fatcow/farmfresh/16/lightbulb.png&quot;, &quot;Active&quot;, 16, 16)
  , IMAGE(&quot;/resource/1500335404000/GraphicsPackNew/fatcow/farmfresh/16/lightbulb_off.png&quot;, &quot;Not Active&quot;, 16, 16)
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SSF Avail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Title__c</fullName>
        <label>Short Title</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start date for the Unit offering</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Studyabroad_Exchange_Ind__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Studyabroad Exchange Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Studyabroad_f__c</fullName>
        <formula>IF (Studyabroad_Exchange_Ind__c
  , IMAGE(&quot;/resource/1500335404000/GraphicsPackNew/fatcow/farmfresh/16/lightbulb.png&quot;, &quot;Available&quot;, 16, 16)
  , IMAGE(&quot;/resource/1500335404000/GraphicsPackNew/fatcow/farmfresh/16/lightbulb_off.png&quot;, &quot;Not Available&quot;, 16, 16)
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Studyabroad</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teaching_Period__c</fullName>
        <label>Teaching Period</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teaching_Responsibility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Teaching Responsibility</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Teaching Responsibility</relationshipLabel>
        <relationshipName>Teaching</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Unit title of the Unit offering</description>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UOO_ID__c</fullName>
        <description>System Field - Callista primary key</description>
        <externalId>true</externalId>
        <label>UOO ID</label>
        <length>8</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UO_Unique_Key__c</fullName>
        <externalId>true</externalId>
        <label>UO Unique Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unit_Class__c</fullName>
        <label>Unit Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DAY</fullName>
                </value>
                <value>
                    <fullName>EVENING</fullName>
                </value>
                <value>
                    <fullName>ESP-EC</fullName>
                    <label>ESP ENHANCEMENT CENTRE</label>
                </value>
                <value>
                    <fullName>ESP-TC</fullName>
                    <label>ESP DISTANCE TUTORIAL CENTRE</label>
                </value>
                <value>
                    <fullName>WEEKEND</fullName>
                </value>
                <value>
                    <fullName>RES-DAY</fullName>
                    <label>DAY RESIDENTIAL</label>
                </value>
                <value>
                    <fullName>RES-EVEN</fullName>
                    <label>EVENING RESIDENTIAL</label>
                </value>
                <value>
                    <fullName>BLOCK</fullName>
                </value>
                <value>
                    <fullName>BLOCK-ON</fullName>
                    <label>BLOCK OF ON CAMPUS CLASSES</label>
                </value>
                <value>
                    <fullName>DE</fullName>
                    <label>DISTANCE EDUCATION</label>
                </value>
                <value>
                    <fullName>OFF-EVEN</fullName>
                    <label>OFF CAMPUS EVENING CLASS</label>
                </value>
                <value>
                    <fullName>OFF-DAY</fullName>
                    <label>OFF CAMPUS DAY CLASS</label>
                </value>
                <value>
                    <fullName>OPEN-LEARN</fullName>
                    <label>OPEN LEARNING</label>
                </value>
                <value>
                    <fullName>BLOCK-OFF</fullName>
                    <label>BLOCK OF OFF CAMPUS CLASSES</label>
                </value>
                <value>
                    <fullName>FLEXIBLE</fullName>
                    <label>FLEXIBLE CLASS WITH ON AND OFF CAMPUS LEARNING</label>
                </value>
                <value>
                    <fullName>SPLIT-ON</fullName>
                    <label>SPLIT BLOCK ON CAMPUS CLASSES</label>
                </value>
                <value>
                    <fullName>SPLIT-OFF</fullName>
                    <label>SPLIT BLOCK OFF CAMPUS CLASSES</label>
                </value>
                <value>
                    <fullName>EXT-CAND</fullName>
                    <label>EXTERNAL RESEARCH CANDIDATURE</label>
                </value>
                <value>
                    <fullName>WEEKEND-ON</fullName>
                    <label>WEEKEND ON CAMPUS CLASSES</label>
                </value>
                <value>
                    <fullName>WEEKEND-OF</fullName>
                    <label>WEEKEND OFF CAMPUS CLASSES</label>
                </value>
                <value>
                    <fullName>DAY-OFF</fullName>
                </value>
                <value>
                    <fullName>EVEN-OFF</fullName>
                </value>
                <value>
                    <fullName>OPEN-ONLIN</fullName>
                    <label>OPEN LEARNING - ONLINE DELIVERY ONLY</label>
                </value>
                <value>
                    <fullName>EXAMCLIENT</fullName>
                    <label>COMMERCIAL CLIENT - EXAM ONLY</label>
                </value>
                <value>
                    <fullName>OCL</fullName>
                    <label>OFFCAMPUS LEARNING - PRINT DELIVERY</label>
                </value>
                <value>
                    <fullName>OCL-ONLINE</fullName>
                    <label>OFFCAMPUS LEARNING - PRINT &amp; ONLINE DELIVERY</label>
                </value>
                <value>
                    <fullName>OCL-RESBLK</fullName>
                    <label>OFFCAMPUS LEARNING - WITH RESIDENTIAL BLOCK</label>
                </value>
                <value>
                    <fullName>ONLINE</fullName>
                    <label>FULLY ELECTRONIC DELIVERY</label>
                </value>
                <value>
                    <fullName>ONLINE-DAY</fullName>
                    <label>ELECTRONIC DELIVERY FOR DAY STUDENTS</label>
                </value>
                <value>
                    <fullName>DE-ONLINE</fullName>
                    <label>DISTANCE EDUCATION - PRINT &amp; ONLINE DELIVERY</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Code__c</fullName>
        <description>Code of the attempted unit.</description>
        <label>Unit Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Level__c</fullName>
        <label>Unit Level</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Mode__c</fullName>
        <label>Unit Mode</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Unit_Class__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ON</fullName>
                    <label>ON CAMPUS</label>
                </value>
                <value>
                    <fullName>OFF</fullName>
                    <label>OFF CAMPUS</label>
                </value>
                <value>
                    <fullName>COMPOSITE</fullName>
                    <label>ON/OFF CAMPUS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Quota__c</fullName>
        <label>Unit Quota</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Version__c</fullName>
        <description>Unit Version</description>
        <label>Unit Version</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Unit Offering</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Unit_Code__c</columns>
        <columns>Unit_Version__c</columns>
        <columns>Academic_Year__c</columns>
        <columns>Location__c</columns>
        <columns>Offered_Ind__c</columns>
        <columns>Calendar_Type__c</columns>
        <columns>Teaching_Period__c</columns>
        <columns>Title__c</columns>
        <columns>Active_Ind__c</columns>
        <columns>Managing_Faculty__c</columns>
        <columns>Managing_Department__c</columns>
        <columns>Teaching_Responsibility__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Academic_Year__c</field>
            <operation>greaterOrEqual</operation>
            <value>2023</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Monash_Forms_Overload_able_UOs</fullName>
        <columns>NAME</columns>
        <columns>Unit_Code__c</columns>
        <columns>Title__c</columns>
        <columns>Offered_Ind__c</columns>
        <columns>Academic_Year__c</columns>
        <columns>Calendar__c</columns>
        <columns>Location__c</columns>
        <columns>Unit_Mode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Offered_Ind__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Academic_Year__c</field>
            <operation>equals</operation>
            <value>2024,2025</value>
        </filters>
        <filters>
            <field>Calendar__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Unit_Code__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Unit_Mode__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Monash Forms - Overload(able) UOs</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unit Offerings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>